[project]
name = "comorbidity-graph"
version = "0.1.0"
description = "Comorbidity-distance evaluation for disease-steering prediction sets (SAE vs Delphi)."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "pyarrow>=14.0",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["comorbidity_graph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
